--- a/requirements-cleanrl-atari.txt
+++ b/requirements-cleanrl-atari.txt
@@ -23,7 +23,7 @@ google-auth==2.18.0 ; python_full_version >= "3.7.1" and python_version < "3.11"
 grpcio==1.54.0 ; python_full_version >= "3.7.1" and python_version < "3.11"
 gym-notices==0.0.8 ; python_full_version >= "3.7.1" and python_version < "3.11"
 gym==0.23.1 ; python_full_version >= "3.7.1" and python_version < "3.11"
-gymnasium==0.29.1 ; python_full_version >= "3.7.1" and python_version < "3.11"
+gymnasium==0.28.1 ; python_full_version >= "3.7.1" and python_version < "3.11"
 huggingface-hub==0.11.1 ; python_full_version >= "3.7.1" and python_version < "3.11"
 idna==3.4 ; python_full_version >= "3.7.1" and python_version < "3.11"
 imageio-ffmpeg==0.4.9 ; python_full_version >= "3.7.1" and python_version < "3.11"
@@ -63,7 +63,7 @@ setproctitle==1.3.2 ; python_full_version >= "3.7.1" and python_version < "3.11"
 setuptools==67.7.2 ; python_full_version >= "3.7.1" and python_version < "3.11"
 six==1.16.0 ; python_full_version >= "3.7.1" and python_version < "3.11"
 smmap==5.0.0 ; python_full_version >= "3.7.1" and python_version < "3.11"
-stable-baselines3==1.2.0 ; python_full_version >= "3.7.1" and python_version < "3.11"
+stable-baselines3==2.0.0a1 ; python_full_version >= "3.7.1" and python_version < "3.11"
 tenacity==8.2.2 ; python_full_version >= "3.7.1" and python_version < "3.11"
 tensorboard-data-server==0.6.1 ; python_full_version >= "3.7.1" and python_version < "3.11"
 tensorboard-plugin-wit==1.8.1 ; python_full_version >= "3.7.1" and python_version < "3.11"
